# YoutubeVideoDownloader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-desktop.yml
assets/: app_icon.icns
docs/: project-plan.md
installer/: windows_installer.iss
scripts/: build_desktop_app.py  generate_app_icon.py
src/youtube_video_downloader/: __init__.py  cli.py  config.py  gui.py  gui_main.py  models.py
src/youtube_video_downloader/services/: __init__.py  downloader.py  proxy_provider.py
tests/: test_cli.py  test_downloader.py  test_gui_main.py  test_gui_open_path.py  test_gui_resolution.py  test_models.py
