[project]
name = "youtube-video-downloader"
version = "0.2.5"
description = "A uv-managed Python CLI for downloading YouTube videos with configurable resolution and subtitles."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.16,<1.0",
    "yt-dlp>=2025.3.31",
]

[project.scripts]
youtube-video-downloader = "youtube_video_downloader.cli:main"
youtube-video-downloader-gui = "youtube_video_downloader.gui_main:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
]
build = [
    "pyinstaller>=6.10,<7.0",
    "imageio-ffmpeg>=0.5,<1.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_video_downloader"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
